--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.4.8",
+    "chart.js": "^4.4.9",
+    "chartjs-chart-box-and-violin-plot": "^4.0.0",
+    "dompurify": "^3.2.5",
     "firebase": "^11.6.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
